--- a/src/pages/risk-reviews/risk-reviews.html
+++ b/src/pages/risk-reviews/risk-reviews.html
@@ -39,7 +39,7 @@
       </ion-col>
       <ion-col>
         <button ion-button color="primary" clear small icon-start
-          (click)="onRiskReview()">
+          (click)="onLoadRiskReview(rReview)">
           <ion-icon name="checkmark-circle-outline"></ion-icon> Review Now</button>
       </ion-col>
     </ion-row>
