--- a/src/pages/risk/risk.html
+++ b/src/pages/risk/risk.html
@@ -104,8 +104,8 @@
         Response plannings
       </ion-list-header>    
       
-      <ion-card color="light">
-        <ion-item color="light">
+      <ion-card>
+        <ion-item>
           <h2>On Project Alpha</h2>
         </ion-item>
 
@@ -132,8 +132,8 @@
         </ion-row>
       </ion-card>
 
-      <ion-card color="light">
-        <ion-item color="light">
+      <ion-card>
+        <ion-item>
           <h2>On activity 2</h2>
         </ion-item>
 
