--- a/src/pages/risk-review-form/risk-review-form.html
+++ b/src/pages/risk-review-form/risk-review-form.html
@@ -8,30 +8,36 @@
     <form [formGroup]="riskReviewForm" (ngSubmit)="onSubmit()">
         <ion-list>
             <ion-list-header>
-                {{ mode }} Risk Review
+                {{ riskReview.riskTitle }} on 
+                {{ riskReview?.projectName || riskReview?.activityTitle }}
             </ion-list-header>
             <ion-item>
-                <ion-range formControlName="cost" min="10" step="10" max="90" snaps="true" color="primary">
+                <ion-range formControlName="cost" min="10" step="10" max="90" 
+                    snaps="true" color="secondary">
                     <ion-label range-left class="small-text">Cost</ion-label>
                 </ion-range>
             </ion-item>
             <ion-item>
-                <ion-range formControlName="schedule" min="10" step="10" max="90" snaps="true" color="primary">
+                <ion-range formControlName="schedule" min="10" step="10" max="90" 
+                    snaps="true" color="primary">
                     <ion-label range-left class="small-text">Schedule</ion-label>
                 </ion-range>
             </ion-item>
             <ion-item>
-                <ion-range formControlName="scope" min="10" step="10" max="90" snaps="true" color="primary">
+                <ion-range formControlName="scope" min="10" step="10" max="90" 
+                    snaps="true" color="subtle">
                     <ion-label range-left class="small-text">Scope</ion-label>
                 </ion-range>
             </ion-item>
             <ion-item>
-                <ion-range formControlName="quality" min="10" step="10" max="90" snaps="true" color="primary">
+                <ion-range formControlName="quality" min="10" step="10" max="90" 
+                    snaps="true" color="energized">
                     <ion-label range-left class="small-text">Quality</ion-label>
                 </ion-range>
             </ion-item>
             <ion-item>
-                <ion-range formControlName="probability" min="10" step="10" max="90" snaps="true" color="primary">
+                <ion-range formControlName="probability" min="10" step="10" max="90" 
+                    snaps="true" color="danger">
                     <ion-label range-left class="small-text">Probability</ion-label>
                 </ion-range>
             </ion-item>
