--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="projectsPage" tabIcon="briefcase" tabTitle="Projects"></ion-tab>
+  <ion-tab [root]="analyticsPage" tabIcon="analytics" tabTitle="Analytics"></ion-tab>
   <ion-tab [root]="riskReviewsPage" tabIcon="checkmark-circle-outline" tabTitle="Reviews"></ion-tab>
 </ion-tabs>
