--- a/src/pages/risk-reviews/risk-reviews.html
+++ b/src/pages/risk-reviews/risk-reviews.html
@@ -47,7 +47,7 @@
         <button ion-button color="primary" clear small icon-start
           (click)="onLoadRiskReview(rReview)">
           <ion-icon name="checkmark-circle-outline"></ion-icon>
-          {{ rReview.riskReviewId ? 'Edit Review' : 'Add Review' }}
+          {{ rReview.riskReviewId ? 'Edit' : 'Add' }}
         </button>
       </ion-col>
     </ion-row>
