--- a/src/pages/analytics/analytics.html
+++ b/src/pages/analytics/analytics.html
@@ -14,7 +14,7 @@
 
     <ion-card>
         <ion-card-header>
-            Bar Chart
+            Risks by Categories
         </ion-card-header>
         <ion-card-content>
             <canvas #rcCanvas></canvas>
@@ -30,12 +30,12 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-card>
+     <ion-card>
         <ion-card-header>
             Doughnut Chart
         </ion-card-header>
         <ion-card-content>
             <canvas #doughnutCanvas></canvas>
         </ion-card-content>
-    </ion-card> -->
+    </ion-card>  -->
 </ion-content>
