--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,9 +1,15 @@
+<ion-header>
+  <ion-navbar no-border-bottom>
+    <ion-title>Project Risk Prediction</ion-title>
+  </ion-navbar>
+</ion-header>
+
 <ion-content padding class="login-content">
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="login">
       <ion-list>
         <ion-list-header>
-          Project Risk Prediction
+          Login
         </ion-list-header>
         <ion-item>
           <ion-label fixed>Email</ion-label>
