--- a/src/pages/project/project.html
+++ b/src/pages/project/project.html
@@ -21,6 +21,9 @@
       <ion-segment-button value="info">
         Info
       </ion-segment-button>
+      <ion-segment-button value="values">
+        Values
+      </ion-segment-button>
       <ion-segment-button value="activities">
         Activities
       </ion-segment-button>
@@ -41,6 +44,9 @@
         <ion-row>
           <ion-col text-center>
             <h2>{{ project.projectName }}</h2>
+            <!-- <ion-badge text-center color="light">
+              {{ project.projectValue | currency: 'USD' : true }}
+            </ion-badge> -->
           </ion-col>
         </ion-row>
         <ion-row>
@@ -48,6 +54,57 @@
             <p>{{ project.projectScope }}</p>
             <p></p>
           </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-list>
+    
+    <ion-list *ngSwitchCase="'values'">
+      <ion-list-header>
+        Expected Values
+      </ion-list-header>
+
+      <ion-row *ngIf="!expectedValues?.bestCase">
+        <ion-col text-center>
+          <p>No expected values found. </p>
+        </ion-col>
+      </ion-row>
+
+      <ion-grid>
+        <ion-row>
+          <ion-item *ngIf="expectedValues?.bestCase">
+            <ion-icon name="thumbs-up" item-start></ion-icon>
+            Best Case
+            <ion-badge item-end color="secondary">
+              {{ expectedValues?.bestCase | currency: 'USD' : true }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item *ngIf="expectedValues?.baseValue">
+            <ion-icon name="logo-usd" item-start></ion-icon>
+            Base Value
+            <ion-badge item-end color="light">
+              {{ expectedValues?.baseValue | currency: 'USD' : true }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item *ngIf="expectedValues?.expectedValue">
+            <ion-icon name="umbrella" item-start></ion-icon>
+            Expected Value
+            <ion-badge item-end color="light">
+              {{ expectedValues?.expectedValue | currency: 'USD' : true }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item *ngIf="expectedValues?.worstCase">
+            <ion-icon name="thumbs-down" item-start></ion-icon>
+            Worst Case
+            <ion-badge item-end color="danger">
+              {{ expectedValues?.worstCase | currency: 'USD' : true }}
+            </ion-badge>
+          </ion-item>
         </ion-row>
       </ion-grid>
     </ion-list>
