--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -21,11 +21,11 @@
       <ion-segment-button value="info">
         Info
       </ion-segment-button>
-      <ion-segment-button value="values">
-        Values
-      </ion-segment-button>
       <ion-segment-button value="risks">
         Risks
+      </ion-segment-button>
+      <ion-segment-button value="reviews">
+        Reviews
       </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
@@ -41,18 +41,160 @@
         <ion-row>
           <ion-col text-center>
             <h2>{{ activity.activityTitle }}</h2>
-            <div class="subtitle">{{ activity.activityAmountHours }} hours / {{ activity.userName }}</div>
           </ion-col>
         </ion-row>
         <ion-row>
+          <ion-item>
+            Amount hours 
+            <ion-badge item-end color="light">
+              {{ activity.activityAmountHours }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item>
+            Owner 
+            <ion-badge item-end color="light">
+              {{ activity.userName }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item>
+            Risks
+            <ion-badge item-end color="light">
+              {{ activity.activityAmountRiskIdentifications }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item>
+            Problems
+            <ion-badge item-end color="light">
+              {{ activity.activityAmountProblems }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
           <ion-col text-justify>
-            <p>{{ activity.activityDetails }}</p>
+            <p>Details: {{ activity.activityDetails }}</p>
           </ion-col>
         </ion-row>
       </ion-grid>
     </ion-list>
 
-    <ion-list *ngSwitchCase="'values'">
+    <ion-list *ngSwitchCase="'risks'">
+      <ion-list-header>
+        Risks
+      </ion-list-header>
+
+      <ion-row *ngIf="risks.length == 0">
+        <ion-col text-center>
+          <p>No risks found</p>
+          <p></p>
+        </ion-col>
+      </ion-row>
+
+      <button 
+        ion-item 
+        *ngFor="let risk of risks; let i = index"
+        (click)="onLoadRisk(risk, activity)">
+        <ion-icon 
+          color="primary" 
+          name="{{ risk.riskIdentificationId ? 'checkmark-circle' : 'radio-button-off' }}" 
+          item-start></ion-icon>
+        <h2>{{ risk.riskTitle }}</h2>
+        <ion-note [ngClass]="{ 'ion-note-threat': risk.riskTypeName == 'Threat', 
+          'ion-note-opportunity': risk.riskTypeName == 'Opportunity' }">
+          {{ risk.riskTypeName }}
+        </ion-note>
+        <p class="bacame-problem">{{ risk.riskProblemId ? 'Became a problem' : '' }}</p>
+      </button>
+
+      <button class="new-button" ion-button block clear (click)="onNewRisk()">Add a new one</button>
+    </ion-list>
+
+    <ion-list *ngSwitchCase="'reviews'">
+      <ion-list-header>
+        Reviewed Risks
+      </ion-list-header>
+
+      <ion-row *ngIf="reviewedRisks.length == 0">
+        <ion-col text-center>
+          <p>No risk reviews found. </p>
+        </ion-col>
+      </ion-row>
+
+      <ion-grid *ngFor="let revRisk of reviewedRisks; let i = index">
+        <ion-row>
+          <ion-item>
+            <h2 class="title">{{ revRisk.riskTitle }}</h2>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item>
+            Priority
+            <ion-badge item-end [ngClass]="{
+              'ion-badge-low': revRisk.riskReviewPriority == 'Low', 
+              'ion-badge-medium': revRisk.riskReviewPriority == 'Medium', 
+              'ion-badge-high': revRisk.riskReviewPriority == 'High' }">
+              {{ revRisk.riskReviewPriority }}</ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item>
+            Type
+            <ion-badge item-end [ngClass]="{ 
+              'ion-badge-threat': revRisk.riskTypeName == 'Threat', 
+              'ion-badge-opportunity': revRisk.riskTypeName == 'Opportunity' }">
+              {{ revRisk.riskTypeName }}</ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item>
+            Consolidated Impact 
+            <p>Higher value between cost, schedule, scope and quality</p>
+            <ion-badge item-end color="light">
+              {{ revRisk.consolidatedImpact }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item>            
+            Cost Impact
+            <ion-badge item-end color="light">
+              {{ revRisk.riskReviewCost }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item>
+            Expected Value
+            <ion-badge item-end color="light">
+              {{ revRisk.expectedValue | currency: 'USD' : true }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item>
+            Impact Value
+            <ion-badge item-end color="light">
+              {{ revRisk.impactValue | currency: 'USD' : true }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+        <ion-row>
+          <ion-item>
+            Reviews            
+            <ion-badge item-end color="light">
+              {{ revRisk.riskReviewAmount }}
+            </ion-badge>
+          </ion-item>
+        </ion-row>
+      </ion-grid>
+
+      <div class="divider"></div>
+
       <ion-list-header>
         Expected Values
       </ion-list-header>
@@ -101,41 +243,6 @@
           </ion-item>
         </ion-row>
       </ion-grid>
-    </ion-list>
-    
-    <ion-list *ngSwitchCase="'risks'">
-      <ion-list-header>
-        Risks
-      </ion-list-header>
-
-      <ion-row *ngIf="risks.length == 0">
-        <ion-col text-center>
-          <p>No risks found</p>
-          <p></p>
-        </ion-col>
-      </ion-row>
-
-      <button 
-        ion-item 
-        *ngFor="let risk of risks; let i = index"
-        (click)="onLoadRisk(risk, activity)">
-        <ion-icon 
-          color="primary" 
-          name="{{ risk.riskIdentificationId ? 'checkmark-circle' : 'radio-button-off' }}" 
-          item-start></ion-icon>
-        <!-- <ion-icon 
-          color="danger" 
-          name="close"
-          item-end></ion-icon> -->
-        <h2>{{ risk.riskTitle }}</h2>
-        <ion-note [ngClass]="{ 'ion-note-threat': risk.riskTypeName == 'Threat', 
-          'ion-note-opportunity': risk.riskTypeName == 'Opportunity' }">
-          {{ risk.riskTypeName }}
-        </ion-note>
-        <p class="bacame-problem">{{ risk.riskProblemId ? 'Became a problem' : '' }}</p>
-      </button>
-
-      <button class="new-button" ion-button block clear (click)="onNewRisk()">Add a new one</button>
     </ion-list>
   </div>
 </ion-content>
